--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
         <img class="contact-img1" src="./assets/imgs/contact-img.png" alt="contact-img">
         <img class="contact-img2" src="./assets/imgs/contact-img2.png" alt="contact-img">
         <div class="form-container">
-            <form action="https://formsubmit.co/nikolai.simeonov36@gmail.com" method="POST">
+            <form action="https://formsubmit.io/send/nikolai.simeonov36@gmail.com" method="POST">
                 <div class="info-container">
                     <div class="details label-name">      
                         <input type="text" name="name" required>
