--- a/index.html
+++ b/index.html
@@ -480,6 +480,7 @@
         <img class="contact-img2" src="./assets/imgs/contact-img2.png" alt="contact-img">
         <div class="form-container">
             <form action="https://formsubmit.io/send/nikolai.simeonov36@gmail.com" method="POST">
+		    <input name="_redirect" type="hidden" id="name" value="https://nikolai-simeonov.github.io/Portfolio/">
                 <div class="info-container">
                     <div class="details label-name">      
                         <input type="text" name="name" required>
