--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
         </div>
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="./assets/designs/design1.png" alt="Design #1" data-original="/assets/designs/design1.png"></div>
-                <div class="swiper-slide"><img src="./assets/designs/design2.png" alt="Design #2" data-original="/assets/designs/design2.png"></div>
-                <div class="swiper-slide"><img src="./assets/designs/design3.png" alt="Design #3" data-original="/assets/designs/design3.png"></div>
-                <div class="swiper-slide"><img src="./assets/designs/design4.png" alt="Design #4" data-original="/assets/designs/design4.png"></div>
-                <div class="swiper-slide"><img src="./assets/designs/design5.png" alt="Design #5" data-original="/assets/designs/design5.png"></div>
+                <div class="swiper-slide"><img src="./assets/designs/design1.png" alt="Design #1" data-original="./assets/designs/design1.png"></div>
+                <div class="swiper-slide"><img src="./assets/designs/design2.png" alt="Design #2" data-original="./assets/designs/design2.png"></div>
+                <div class="swiper-slide"><img src="./assets/designs/design3.png" alt="Design #3" data-original="./assets/designs/design3.png"></div>
+                <div class="swiper-slide"><img src="./assets/designs/design4.png" alt="Design #4" data-original="./assets/designs/design4.png"></div>
+                <div class="swiper-slide"><img src="./assets/designs/design5.png" alt="Design #5" data-original="./assets/designs/design5.png"></div>
             </div>
         </div>
     </div>
